# Tutorials-from-AI

./: README.md
CPP_HPC/: TUTORIAL_DESIGN.md
CPP_HPC/01_Modern_CPP_Base/: README.md
CPP_HPC/01_Modern_CPP_Base/code/: CMakeLists.txt  matrix_performance.cpp
CPP_HPC/02_Numerical_Computing/: README.md
CPP_HPC/02_Numerical_Computing/code/: CMakeLists.txt  eigen_example.cpp  float_precision.cpp
CPP_HPC/03_Performance_Optimization/: README.md
CPP_HPC/03_Performance_Optimization/code/: CMakeLists.txt  false_sharing.cpp  matrix_multiply_opt.cpp
CPP_HPC/04_Parallel_Shared_Memory/: README.md
CPP_HPC/04_Parallel_Shared_Memory/code/: CMakeLists.txt  omp_demo.cpp  thread_demo.cpp
CPP_HPC/05_Parallel_Distributed/: README.md
CPP_HPC/05_Parallel_Distributed/code/: CMakeLists.txt  mpi_coll.cpp  mpi_hello.cpp  mpi_p2p.cpp
CPP_HPC/06_HPC_Environment/: README.md  modules_guide.md
CPP_HPC/06_HPC_Environment/code/: CMakeLists.txt  job_script.slurm
CPP_HPC/06_HPC_Environment/code/include/: hpc_utils.hpp
CPP_HPC/06_HPC_Environment/code/src/: hpc_utils.cpp  main.cpp
CPP_HPC/07_Case_Study/: README.md
CPP_HPC/07_Case_Study/code/: CMakeLists.txt  plot_nbody.py
CPP_HPC/07_Case_Study/code/include/: nbody_core.hpp
CPP_HPC/07_Case_Study/code/src/: nbody_core.cpp  nbody_mpi.cpp  nbody_omp.cpp
CPP_Resume/: DESIGN.md  README.md
CPP_Resume/01_syntax_review/: 01_basic_syntax.md  02_pointers_references.md  03_classes_objects.md  04_templates_basics.md  05_stl_containers.md  06_modern_features.md  README.md
CPP_Resume/01_syntax_review/examples/: basic_demo.cpp  class_demo.cpp  pointer_demo.cpp  stl_demo.cpp  template_demo.cpp
CPP_Resume/02_modern_paradigms/: 01_raii_resource.md  02_smart_pointers.md  03_move_semantics.md  04_lambda_functional.md  05_type_deduction.md  06_constexpr_compile.md  07_error_handling.md  08_concurrency_intro.md  README.md
CPP_Resume/02_modern_paradigms/examples/: constexpr_demo.cpp  error_demo.cpp  lambda_demo.cpp  move_demo.cpp  raii_demo.cpp  smart_ptr_demo.cpp  thread_demo.cpp  type_deduction_demo.cpp
CPP_Resume/03_algorithm_design/: 01_complexity_analysis.md  02_stl_algorithms.md  03_sorting_searching.md  04_recursion_dp.md  05_data_structures.md  06_practical_problems.md  README.md
CPP_Resume/03_algorithm_design/examples/: complexity_demo.cpp  data_struct_demo.cpp  dp_demo.cpp  recursion_demo.cpp  sort_search_demo.cpp  stl_algo_demo.cpp
HPC_Using/: HPC_Tutorial_Design_Document.md
HPC_Using/01_Linux_Basics_and_Environment/: Example_Code_Explanations.md  Tutorial_Content.md
HPC_Using/01_Linux_Basics_and_Environment/examples/: 01_hello.sh  02_env_vars.sh  03_module_demo.sh
HPC_Using/02_PBS_Scheduler_Guide/: Example_Code_Explanations.md  Tutorial_Content.md
HPC_Using/02_PBS_Scheduler_Guide/examples/: 01_basic_job.pbs  02_mpi_job.pbs  03_openmp_job.pbs  (+2 more)
HPC_Using/03_Slurm_Scheduler_Guide/: Example_Code_Explanations.md  Tutorial_Content.md
HPC_Using/04_Appendix/: Common_Errors_and_FAQ.md  PBS_Slurm_Rosetta_Stone.md
PyQt/: DESIGN.md  README.md  requirements.txt
PyQt/ch01_basics/: README.md  basic_widgets.py  first_window.py  install_check.py  widget_properties.py
PyQt/ch02_layout/: README.md  form_layout_demo.py  grid_layout_demo.py  groupbox_tabs.py  hbox_vbox_demo.py  nested_layout.py
PyQt/ch03_signals/: README.md  builtin_signals.py  custom_signal.py  lambda_signals.py  signal_slot_basic.py  signal_with_params.py
PyQt/ch04_plotting/: README.md  interactive_params.py  mpl_embed_basic.py  mpl_with_toolbar.py  multi_subplot.py  plot_export.py  realtime_plot.py  scientific_style.py
PyQt/ch05_data_analysis/: README.md  curve_fitting.py  data_filter.py  file_dialog.py  progress_bar.py  table_view.py  threading_demo.py
PyQt/ch06_communication/: README.md  network_comm.py  protocol_parser.py  serial_basic.py  serial_comm.py  visa_control.py
PyQt/ch07_instrument/: README.md  data_acquisition.py  instrument_framework.py  signal_generator.py  temperature_controller.py
PyQt/ch08_project/: README.md  config_manager.py  logging_system.py
shellScripts/: DESIGN.md
shellScripts/01-basics/: 01-hello.sh  02-variables.sh  03-conditions.sh  04-loops.sh  05-functions.sh  README.md
shellScripts/02-file-operations/: 01-file-test.sh  02-file-process.sh  03-directory-ops.sh  README.md
shellScripts/03-process-management/: 01-background.sh  02-nohup-screen.sh  03-process-control.sh  README.md
shellScripts/04-python-automation/: 01-run-python.sh  02-venv-manage.sh  03-batch-python.sh  README.md  sample.py
shellScripts/05-cpp-automation/: 01-compile-run.sh  02-makefile-integration.sh  03-batch-cpp.sh  README.md
shellScripts/06-parameter-handling/: 01-args-basics.sh  02-getopts.sh  03-config-files.sh  04-param-substitution.sh  05-pipeline.sh  README.md
shellScripts/07-task-scheduling/: 01-cron-basics.sh  02-at-command.sh  03-systemd-timer.sh  README.md
shellScripts/08-hpc-schedulers/: 04-best-practices.md  README.md
(+25 files in other folders)
